<?xml version="1.0"?>
<package format="2">
  <name>tlsf</name>
  <version>0.0.0</version>
  <description>TLSF allocator version 2.4.6</description>
  <maintainer email="jackie@osrfoundation.org">Jackie Kay</maintainer>
  <license>GNU Lesser Public License 2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
